# rpi

./: .gitignore  .gitmodules  README.md  build.sh  old_README.md
conf/: 50-ENAC-network.yaml  80-cooking-mama.rules  80-robot.rules  Readme.md  alien.txt  eprom.txt  install_packages.sh  local.conf  logo.txt  requirements.txt  robot_enac.pth  setup_venv.sh
conf/_etc_netplan/: 50-ENAC-network.yaml.robot  50-autonomous-robot.yaml.robot
conf/_etc_udev_rules.d/: 60-gpiod.rules  80-robot.rules
data/camera_calibrations/: Readme.md  bill_3840x2160.yml  bill_8000x6000.yml  dipper_1024x768.yml  dipper_640x480.yml  dipper_coeffs_1024x768.npy  dipper_coeffs_1920x1080.npy  dipper_coeffs_640x480.npy  dipper_matrix_1024x768.npy  dipper_matrix_640x480.npy  dipper_rvec.npy  dipper_tvec.npy  mabel_1024x768.yml  mabel_640x480.yml  mabel_coeffs_640x480.npy  mabel_matrix_640x480.npy  mabel_rvec.npy  mabel_tvec.npy
drivers/: Readme.md  bridge_IO.py  bridge_base.py  tirette.py
drivers/Joysticks/: joysticks.py
drivers/camera/: 2048x1543_dipper_coeffs.npy  2048x1543_dipper_matrix.npy  arucoFinder.py  (+5 more)
drivers/lidar/ld06_cpp/: CMakeLists.txt  Readme.md
drivers/lidar/ld06_cpp/src/: ld06.cpp  ld06.h  main.cpp
drivers/vl53cpp/: CMakeLists.txt  Readme.md
drivers/vl53cpp/src/: main.cpp  vl53.cpp  vl53.h
drivers/vl53cpp/src/platform/: platform.h
legacy/: Readme.md  conserveVisu.py  musics.py
proto/: robot_state.proto
services/: .gitignore  Readme.md  camera_clients.py  heartbeat.py  heartbeat.service  heartbeat_v2.sh  install_services.sh  lidar_clients.py  lidar_clients.sh  pigpiod.service  rest_wifi.py  robot_IO.service  robot_aruco.service  robot_aruco2.service  robot_bridge.service  robot_ekf.service  robot_joystick.service  robot_lcd.service  robot_lidar_amalgameur.service  robot_lidar_clients.service  robot_lidar_driver.service  robot_lidar_fusion.service  robot_lidar_loca.service  robot_optitrack.service  robot_record.service  robot_start.service  robot_strat.service  robot_tirette.service  robot_ui.service  robot_vl53.service  script_restart_wifi.sh
sw/: IO_BT.py  Readme.md  Roboto.py  actionneurs.py  bridge_IF.py  bridge_IO.py  bridge_base.py  bt_essentials.py  common.py  dijkstra.py  fsm.py  graph.txt  lcd.py  lcd_client.py  loca_lidar.py  locomotion.py  map.py  musics.py  nav.py  robot.py  set_pid_coef.py  state_essentials.py  strat.py  stratBT.py  test_nav.py  test_plantes.py  test_system_manager.py  world.py
sw/camera/ArucoFinderCpp/: CMakeLists.txt  Readme.md
sw/camera/ArucoFinderCpp/src/: arucoFinder.cpp  arucoFinder.h  main.cpp
tools/: Readme.md  cam_cv2ecal.py  cam_ecal_rcv.py  set_pid_coef.py  test_pid_cons.py  test_plantes.py  test_system_manager.py  visu_all.sh  vl53detect_orientation_planche.py  vl53detectplant.py  vl53visu.py
(+145 files in other folders)
